# aura-webrtc-back

./: pyproject.toml
certs/: cert.pem  key.pem
src/aura_webrtc_back/: __main__.py  app.py  cert_utils.py  room_manager.py  signaling.py
static/: app.js  index.html  style.css
