[project]
name = "aura-webrtc-back"
version = "0.1.0"
description = ""
authors = [
    {name = "WallansDev",email = "timothe.vaquie1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "websockets (>=16.0,<17.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "cryptography (>=44.0.0,<45.0.0)"
]

[tool.poetry]
packages = [{include = "aura_webrtc_back", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
